--- a/index.css
+++ b/index.css
@@ -4,15 +4,20 @@
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 20px;
 }
 
 main {
-  height: 100px;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
 
 #countdown {
-  font-size: 40px;
+  font-size: 30px;
+}
+
+#delay {
+  text-align: right;
+  margin-right: 40px;
 }
